# israelgrocerymcp

./: .env.example  .gitignore  INSTALL.md  README.md  main.py  manifest.json  pyproject.toml
src/: config.py  models.py  server.py
src/auth/: session_store.py
src/comparison/: engine.py
src/israelgrocery_mcp/: __init__.py
src/matching/: product_search.py  ranker.py
src/recipes/: parser.py
src/stores/: __init__.py  base.py  shufersal.py  tivtaam.py
tests/: test_comparison.py  test_ranker.py  test_recipe_parser.py
