[project]
name = "israelgrocery-mcp"
version = "0.1.0"
description = "Unified MCP server for Israeli grocery shopping — Shufersal + Tiv Taam with cross-store price comparison."
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "beautifulsoup4>=4.12.0",
    "httpx>=0.27.0",
    "mcp>=1.0.0",
    "playwright>=1.40.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
israelgrocery-mcp = "israelgrocery_mcp:main"

[build-system]
requires = ["uv_build>=0.6,<0.7"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
